Added room list in chat.js, and display room name and user name in sidebar.

--- a/public/chat.html
+++ b/public/chat.html
@@ -10,8 +10,12 @@
 
 <body class="chat">
 	<div class="chat__sidebar">
+		<div id="room-name"></div>
 		<h3>People</h3>
 		<div id="users"></div>
+		<h3>Rooms</h3>
+		<div id="rooms"></div>
+		<div id="user"></div>
 	</div>
 
 	<div class="chat__main">
