--- a/public/chat.html
+++ b/public/chat.html
@@ -30,6 +30,7 @@
 		</div>
 	</div>
 
+  <!-- Mustache message templates -->
 	<script id="location-message-template" type="text/template">
 		<li class="message">
 			<div class="message__title">
